Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-2198

Differentiate queries in exceptional states in web UI

    XMLWordPrintableJSON

Details

    Description

      The queries web UI shows queries in an exceptional state as "in flight" until they are explicitly closed, but this seems to be confusing for some users. We should improve this by differentiating these queries (i.e. those where the query state is EXCEPTION) from those that are actually currently "running".

      Attachments

        Activity

          People

            twmarshall Thomas Tauber-Marshall
            mjacobs Matthew Jacobs
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: